--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,7 @@ jobs:
                 npm install -g newman-reporter-htmlextra
 
             - name: Run Tests
-              run: newman run "SDET-QA.postman_collection" -r cli,htmlextra --reporter-htmlextra-export
+              run: newman run "SDET-QA.postman_collection.json" -r cli,htmlextra --reporter-htmlextra-export
                     testartifacts/htmlreport.html
 
             - name: Output the results
