--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,11 +22,10 @@ jobs:
                 npm install -g newman-reporter-htmlextra
 
             - name: Run Tests
-              run: newman run "SDET-QA.postman_collection.json" -r cli,htmlextra --reporter-htmlextra-export
-                    testartifacts/htmlreport.html
+              run: newman run "SDET-QA.postman_collection.json" -r cli,htmlextra --reporter-htmlextra-export testArtifacts/htmlreport.html
 
             - name: Output the results
               uses: actions/upload-artifact@v3
               with: 
                 name: Reports
-                path: TestArtifacts
+                path: testArtifacts
