--- a/.github/workflows/SendEmail.yml
+++ b/.github/workflows/SendEmail.yml
@@ -19,7 +19,7 @@ jobs:
               run: npm install -g apidog-cli
 
             - name: Running Test Scenario
-              run: apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r cli,htmlextra --reporter-htmlextra-export testArtifacts/htmlreport.html
+              run: apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r htmlextra --reporter-htmlextra-export testArtifacts/htmlreport.html,cli
 
             - name: Output the results
               uses: actions/upload-artifact@v3
