--- a/.github/workflows/APIDogEmail.yml
+++ b/.github/workflows/APIDogEmail.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm install @sendgrid/mail
         
       - name: Create testArtifacts directory
-        run: mkdir TestArtifacts
+        run: mkdir -p testArtifacts
         
       - name: Install Node.js
         uses: actions/setup-node@v2
