--- a/.github/workflows/APIDogEmail.yml
+++ b/.github/workflows/APIDogEmail.yml
@@ -31,7 +31,10 @@ jobs:
         run: |
           curl -o testArtifacts/apidog_report.html "https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt" && \
           apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r cli
-      
+
+      - name: Convert JSON to HTML        
+        run: node scripts/convertJsonToHtml.js
+        
       - name: Output the results
         uses: actions/upload-artifact@v3
         with: 
