--- a/.github/workflows/APIDogEmail.yml
+++ b/.github/workflows/APIDogEmail.yml
@@ -38,8 +38,8 @@ jobs:
           name: Reports
           path: testArtifacts
 
-      # - name: Convert JSON to HTML        
-      #   run: node scripts/convertJsonToHtml.js
+      - name: Convert JSON to HTML        
+        run: node scripts/convertJsonToHtml.js
 
       - name: Send email with HTML report
         run: node sendEmail.js
