--- a/.github/workflows/SendGrid.yml
+++ b/.github/workflows/SendGrid.yml
@@ -1,26 +1,51 @@
-name: Send Email with Reports
-
+name: Run APIdog Tests and Send Email
+ 
 on: workflow_dispatch
-
+  # push:
+  #   branches:
+  #     - main  # Trigger the workflow on pushes to the main branch
+ 
 jobs:
-  send_email:
+  test_and_send_email:
     runs-on: ubuntu-latest
-
+ 
     steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: test-results  # Name of the artifact containing your reports
-        path: reports  # Directory to download the artifact
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Send email with reports
-      uses: sendgrid/email-action@1.3.1
-      env:
-        SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}  # SendGrid API key
-      with:
-        to: nandakumarap@anthology.com  # Email recipient
-        from: ivpnotifications@products.anthology.com  # Your email address
-        subject: Test Reports
-        text: Please find attached the test reports.
-        attachments: |
-          reports/*
+      - name: Install SendGrid library
+        run: npm install @sendgrid/mail
+        
+      - name: Create testArtifacts directory
+        run: mkdir -p testArtifacts
+        
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+ 
+      - name: Install APIdog CLI
+        run: npm install -g apidog-cli
+ 
+      - name: Run APIdog tests and generate HTML report
+        run: |
+          curl -o testArtifacts/apidog_report.html "https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt" && \
+          apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r html cli
+        
+      - name: Output the results
+        uses: actions/upload-artifact@v3
+        with: 
+          name: Reports
+          path: testArtifacts
+
+      - name: Send email with reports
+        uses: sendgrid/email-action@1.3.1
+        env:
+          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}  # SendGrid API key
+        with:
+          to: nandakumarap@anthology.com  # Email recipient
+          from: ivpnotifications@products.anthology.com  # Your email address
+          subject: Test Reports
+          text: Please find attached the test reports.
+          attachments: |
+            reports/*
