--- a/.github/workflows/APIDogEmail.yml
+++ b/.github/workflows/APIDogEmail.yml
@@ -1,47 +1,21 @@
-name: Run APIdog Tests and Send Email
+name: APIdog Test and Report
  
-on: workflow_dispatch
-  # push:
-  #   branches:
-  #     - main  # Trigger the workflow on pushes to the main branch
+on:workflow_dispatch
  
 jobs:
-  test_and_send_email:
+  apidog_test:
     runs-on: ubuntu-latest
- 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Install SendGrid library
-        run: npm install @sendgrid/mail
-        
-      - name: Create testArtifacts directory
-        run: mkdir -p testArtifacts
-        
-      - name: Install Node.js
-        uses: actions/setup-node@v2
+ 
+      # Step to run APIdog tests and save JSON report as an artifact
+      - name: Run APIdog tests
+        run: apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r cli,json
+        # This command runs APIdog tests and generates both CLI and JSON reports
+ 
+      - name: Archive JSON report as artifact
+        uses: actions/upload-artifact@v2
         with:
-          node-version: '14'
- 
-      - name: Install APIdog CLI
-        run: npm install -g apidog-cli
- 
-      - name: Run APIdog tests and generate HTML report
-        run: |
-          curl -o testArtifacts/apidog_report.html "https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt" && \
-          apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r html cli
-        
-      - name: Output the results
-        uses: actions/upload-artifact@v3
-        with: 
-          name: Reports
-          path: testArtifacts
-
-      - name: Convert JSON to HTML        
-        run: node convertJsonToHtml.js
-
-      - name: Send email with HTML report
-        run: node sendEmail.js
-        env:
-          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+          name: apidog_report
+          path: testArtifacts/apidog_report.json  # Adjust the path to the location of your JSON report file
