--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,31 +1,24 @@
-name: APIDogCLI
-on: workflow_dispatch
-
+name: APIdogCLI Test and Report
+ 
+on:
+  push:
+    branches:
+      - main  # Trigger the workflow on pushes to the main branch
+ 
 jobs:
-    test-api:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - name: Create dir
-              run: |
-                mkdir  TestArtifacts
-
-            - name: Install Node
-              uses: actions/setup-node@v3
-              with:
-                node-version: '16.x'
-
-            - name: Install Newman
-              run: |
-                npm install -g newman
-                npm install -g newman-reporter-slackreporter
-                npm install -g newman-reporter-htmlextra
-
-            - name: Run Tests
-              run: newman run "SDET-QA.postman_collection.json" -r cli,htmlextra --reporter-htmlextra-export testArtifacts/htmlreport.html
-
-            - name: Output the results
-              uses: actions/upload-artifact@v3
-              with: 
-                name: Reports
-                path: testArtifacts
+  apidog_test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+ 
+      # Step to run APIdog tests and save JSON report as an artifact
+      - name: Run APIdog tests
+        run: apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r cli,json
+        # This command runs APIdog tests and generates both CLI and JSON reports
+ 
+      - name: Archive JSON report as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: apidog_report
+          path: path/to/apidog_report.json  # Adjust the path to the location of your JSON report file
