--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,21 +1,30 @@
-name: APIdogCLI Test and Report
- 
+name: APIDog Tests
+
 on: workflow_dispatch
- 
+
 jobs:
-  apidog_test:
+  test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
- 
-      # Step to run APIdog tests and save JSON report as an artifact
-      - name: Run APIdog tests
-        run: apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r,cli
-        # This command runs APIdog tests and generates both CLI and JSON reports
- 
-      - name: Archive JSON report as artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: apidog_report
-          path: path/to/apidog_report.json  # Adjust the path to the location of your JSON report file
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+    - name: Install Apidog CLI
+      run: npm install -g apidog-cli
+
+    - name: Run APIDog tests
+      run: |
+        mkdir -p testArtifacts  # Create the directory if it doesn't exist
+        apidog run --output testArtifacts/apidog_report.json run: apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r html,cli
+
+    - name: Upload APIDog reports
+      uses: actions/upload-artifact@v2
+      with:
+        name: apidog-reports
+        path: testArtifacts
