--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,30 +1,47 @@
-name: APIDog Tests
-
+name: Run APIdog Tests and Send Email
 on: workflow_dispatch
-
+  # push:
+  #   branches:
+  #     - main  # Trigger the workflow on pushes to the main branch
 jobs:
-  test:
+  test_and_send_email:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
+      - name: Install SendGrid library
+        run: npm install @sendgrid/mail
+        
+      - name: Create testArtifacts directory
+        run: mkdir TestArtifacts
+        
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          
+      - name: Install APIdog CLI
+        run: npm install -g apidog-cli
+        
+      - name: Run APIdog tests and generate HTML report
+        run: |
+          curl -o testArtifacts/apidog_report.html "https://api.apidog.com/api/v1/projects/469204/api-test/ci-config/349543/detail?token=xdGMPHHcIsP80b1GLkpfHV" && \
+          apidog run https://api.apidog.com/api/v1/projects/469204/api-test/ci-config/349543/detail?token=xdGMPHHcIsP80b1GLkpfHV -r html,cli
+      
+      - name: Output the results
+        uses: actions/upload-artifact@v3
+        with: 
+          name: Reports
+          path: testArtifacts
 
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-
-    - name: Install Apidog CLI
-      run: npm install -g apidog-cli
-
-    - name: Run APIDog tests
-      run: |
-        mkdir -p testArtifacts  # Create the directory if it doesn't exist
-        apidog run testArtifacts/apidog_report.json https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r html,cli
-
-    - name: Upload APIDog reports
-      uses: actions/upload-artifact@v2
-      with:
-        name: apidog-reports
-        path: testArtifacts
+      - name: Install dependencies
+        run: npm install prettier
+  
+      - name: Format HTML
+        run: node format-html.js
+          
+      - name: Send email with HTML report
+        run: node sendEmail.js
+        env:
+                SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
