--- a/.github/workflows/Demo.yml
+++ b/.github/workflows/Demo.yml
@@ -18,4 +18,5 @@ jobs:
       run: npm install -g apidog-cli
 
     - name: Running Test Scenario
-      run: apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r html,cli
+      run: apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r html,cli &&
+           apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349133/detail?token=x3TW6wfE-41UZYJuI8PTqk -r html,cli
