--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,8 +26,8 @@ jobs:
         
       - name: Run APIdog tests and generate HTML report
         run: |
-          curl -o testArtifacts/apidog_report.html "https://api.apidog.com/api/v1/projects/469204/api-test/ci-config/349543/detail?token=xdGMPHHcIsP80b1GLkpfHV" && \
-          apidog run https://api.apidog.com/api/v1/projects/469204/api-test/ci-config/349543/detail?token=xdGMPHHcIsP80b1GLkpfHV -r html,cli
+          curl -o testArtifacts/apidog_report.html "https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt" && \
+          apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r html,cli
       
       - name: Output the results
         uses: actions/upload-artifact@v3
@@ -35,11 +35,11 @@ jobs:
           name: Reports
           path: testArtifacts
 
-      - name: Install dependencies
-        run: npm install prettier
+      # - name: Install dependencies
+      #   run: npm install prettier
   
-      - name: Format HTML
-        run: node format-html.js
+      # - name: Format HTML
+      #   run: node format-html.js
           
       - name: Send email with HTML report
         run: node sendEmail.js
