--- a/.github/workflows/Demo.yml
+++ b/.github/workflows/Demo.yml
@@ -1,22 +1,40 @@
-name: Demo Example
+name: Run APIdog Tests and Send Email
 
-on: [workflow_dispatch]
+on: workflow_dispatch
 
 jobs:
-  build:
+  test_and_send_email:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-
-    - name: Install Apidog CLI
-      run: npm install -g apidog-cli
-
-    - name: Running Test Scenario
-      run: apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r html,cli &&
-           apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349133/detail?token=x3TW6wfE-41UZYJuI8PTqk -r html,cli
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Install SendGrid library
+        run: npm install @sendgrid/mail
+      
+      - name: Create testArtifacts directory
+        run: mkdir testArtifacts
+      
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      
+      - name: Install APIdog CLI
+        run: npm install -g apidog-cli
+      
+      - name: Run APIdog tests and generate HTML report
+        run: |
+          apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -o testArtifacts/apidog_report.html
+      
+      - name: Output the results
+        uses: actions/upload-artifact@v3
+        with: 
+          name: Reports
+          path: testArtifacts
+      
+      - name: Send email with HTML report
+        run: node sendEmail.js
+        env:
+          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
