--- a/.github/workflows/SendGrid.yml
+++ b/.github/workflows/SendGrid.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Install SendGrid library
         run: npm install @sendgrid/mail
         
-      # - name: Create testArtifacts directory
-      #   run: mkdir TestArtifacts
+      - name: Create testArtifacts directory
+        run: mkdir TestArtifacts
         
       - name: Install Node.js
         uses: actions/setup-node@v2
