--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,34 @@
-name: Run APIdog Tests
-
-on: [workflow_dispatch]
+name: Run APIdog Tests and Send Email
+on: workflow_dispatch
   # push:
   #   branches:
-  #     - main
-  # pull_request:
-  #   branches:
-  #     - main
-
+  #     - main  # Trigger the workflow on pushes to the main branch
 jobs:
-  test:
+  test_and_send_email:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Install APIdog CLI
-      run: npm install -g apidog-cli
-
-    - name: Run APIdog tests
-      run: apidog run https://api.apidog.com/api/v1/projects/123456/api-test/ci-config/789012/detail?token=YOUR_TOKEN -r cli,html
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install SendGrid library
+        run: npm install @sendgrid/mail
+      - name: Create testArtifacts directory
+        run: mkdir TestArtifacts
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - name: Install APIdog CLI
+        run: npm install -g apidog-cli
+      - name: Run APIdog tests and generate HTML report
+        run: |
+          curl -o testArtifacts/apidog_report.html "https://api.apidog.com/api/v1/projects/469204/api-test/ci-config/349543/detail?token=xdGMPHHcIsP80b1GLkpfHV" && \
+          apidog run https://api.apidog.com/api/v1/projects/469204/api-test/ci-config/349543/detail?token=xdGMPHHcIsP80b1GLkpfHV -r cli
+      - name: Output the results
+        uses: actions/upload-artifact@v3
+        with: 
+          name: Reports
+          path: testArtifacts
+      - name: Send email with HTML report
+        run: node sendReportEmail.js ${{ github.workspace }}/testArtifacts/apidog_report.html
+        env:
+                SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
