--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
       
       - name: Run APIdog tests and generate JSON report
         run: |
-          curl -o testArtifacts/apidog_report.json "https://api.apidog.com/api/v1/projects//api-test/ci-config//detail?token=" && \
-          apidog run https://api.apidog.com/api/v1/projects//api-test/ci-config//detail?token= -r cli
+          curl -o testArtifacts/apidog_report.json "https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt" && \
+          apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r cli
       
       - name: Convert JSON to HTML
         run: node convertToJsonToHtml.js testArtifacts/apidog_report.json testArtifacts/apidog_report.html
