--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
           path: testArtifacts
       
       - name: Send email with HTML report
-        run: node sendEmail.js
+        run: node sendReportEmail.js
         env:
           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
