--- a/.github/workflows/PostmanEmail.yml
+++ b/.github/workflows/PostmanEmail.yml
@@ -1,51 +1,42 @@
-name: PostmanEmail
+name: Send Email
 on: workflow_dispatch
 
 jobs:
-    test-api:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - name: Create dir
-              run: |
-                mkdir  TestArtifacts
+  test_and_send_email:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Install SendGrid library
+        run: npm install @sendgrid/mail
+      
+      - name: Create testArtifacts directory
+        run: mkdir TestArtifacts
+      
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
+      
+      - name: Install APIdog CLI
+        run: npm install -g apidog-cli
+      
+      - name: Run APIdog tests and generate JSON report
+        run: |
+          curl -o testArtifacts/apidog_report.json "https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt" && \
+          apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r cli
+      
+      - name: Convert JSON to HTML
+        run: node convertToJsonToHtml.js testArtifacts/apidog_report.json testArtifacts/apidog_report.html
 
-            - name: Install Node
-              uses: actions/setup-node@v3
-              with:
-                node-version: '16.x'
-
-            - name: Install Newman
-              run: |
-                npm install -g newman
-                npm install -g newman-reporter-slackreporter
-                npm install -g newman-reporter-htmlextra
-
-            - name: Run Tests
-              run: newman run "SDET-QA.postman_collection.json" -r cli,htmlextra --reporter-htmlextra-export testArtifacts/htmlreport.html
-
-            - name: Output the results
-              uses: actions/upload-artifact@v3
-              with: 
-                name: Reports
-                path: testArtifacts
-   
-    #send_email:
- 
-            - name: Download artifact
-              uses: actions/download-artifact@v2
-              with:
-                name: test-results  # Name of the artifact containing your reports
-                path: reports  # Directory to download the artifact
-        
-            - name: Send email with reports
-              uses: sendgrid/email-action@1.3.1
-              env:
-                SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}  # SendGrid API key
-              with:
-                to: nandakumarap@anthology.com  # Email recipient
-                from: ivpnotifications@products.anthology.com  # Your email address
-                subject: Test Reports
-                text: Please find attached the test reports.
-                attachments: |
-                  reports/*
+      - name: Output the results
+        uses: actions/upload-artifact@v3
+        with: 
+          name: Reports
+          path: testArtifacts/*/
+      
+      - name: Send email with HTML report
+        run: node sendReportEmail.js
+        env:
+          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
