--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with: 
           name: Reports
-          path: testArtifacts/*/
+          path: testArtifacts
       
       - name: Send email with HTML report
         run: node sendReportEmail.js
