--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,26 @@
-name: Run APIdog Tests
-on: workflow_dispatch
+name: Run API tests and generate HTML report
+on: 
+  workflow_dispatch:
 
 jobs:
-  test_and_send_email:
+  test_and_generate_report:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       
-      - name: Install SendGrid library
-        run: npm install @sendgrid/mail
+      - name: Install Newman
+        run: npm install -g newman
       
       - name: Create testArtifacts directory
-        run: mkdir TestArtifacts
+        run: mkdir -p testArtifacts
       
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20'
-      
-      - name: Install APIdog CLI
-        run: npm install -g apidog-cli
-      
-      - name: Run APIdog tests and generate JSON report
+      - name: Run API tests and generate HTML report
         run: |
-          curl -o testArtifacts/apidog_report.json "https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349133/detail?token=x3TW6wfE-41UZYJuI8PTqk" && \
-          apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349133/detail?token=x3TW6wfE-41UZYJuI8PTqk -r cli
-      
-      - name: Convert JSON to HTML
-        run: node convertToJsonToHtml.js testArtifacts/apidog_report.json testArtifacts/apidog_report.html
-
+          newman run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt --reporter-htmlextra-export testArtifacts/report.html
       
       - name: Output the results
         uses: actions/upload-artifact@v3
         with: 
           name: Reports
-          path: testArtifacts
-      
-      - name: Send email with HTML report
-        run: node sendReportEmail.js
-        env:
-          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+          path: ${{ github.workspace }}/testArtifacts/
