--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,22 @@ jobs:
       - name: Create testArtifacts directory
         run: mkdir -p testArtifacts
       
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      
       - name: Run API tests and generate HTML report
         run: |
-          newman run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt --reporter-htmlextra-export testArtifacts/report.html
+          newman run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349133/detail?token= -r htmlextra
       
       - name: Output the results
         uses: actions/upload-artifact@v3
         with: 
           name: Reports
           path: ${{ github.workspace }}/testArtifacts/
+
+      - name: Send email with HTML report
+        run: node sendEmail.js
+        env:
+          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
