--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Run Newman tests and generate HTML report
+name: Run APIdog tests and generate HTML Extra (htmlextra) report
 on: 
   workflow_dispatch:
 
@@ -12,26 +12,27 @@ jobs:
       - name: Install Newman
         run: npm install -g newman newman-reporter-htmlextra
 
-      - name: Create testArtifacts directory
-        run: mkdir -p testArtifacts
-      
-      - name: Install Apidog CLI
-        run: npm install -g apidog-cli
-      
       - name: Run APIdog tests and generate HTML report
         run: |
           apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349135/detail?token=xrwGYepeqT3Yx1KYguS0Pt -r html
-      
-      - name: Convert HTML report to HTML Extra (htmlextra)
+
+      - name: Find dynamically generated APIdog report file
+        id: find-report
         run: |
-          newman run ${{ github.workspace }}/testArtifacts/apidog_report*.html -r htmlextra --reporter-htmlextra-export testArtifacts/report.htmlextra
+          report_file=$(find "${{ github.workspace }}/apidog-reports/" -type f -name "apidog-report-*.html" -printf "%T@ %p\n" | sort -nr | head -n1 | cut -d ' ' -f2)
+          echo "::set-output name=report_path::$report_file"
+
+      - name: Run Newman with HTML report
+        run: |
+          newman run "${{ steps.find-report.outputs.report_path }}" -r htmlextra --reporter-htmlextra-export "${{ steps.find-report.outputs.report_path }}.htmlextra"
 
       - name: Output the results
         uses: actions/upload-artifact@v3
         with: 
           name: Reports
-          path: ${{ github.workspace }}/testArtifacts/
+          path: ${{ steps.find-report.outputs.report_path }}.htmlextra
+
       - name: Send email with HTML report
         run: node sendEmail.js
         env:
-                SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
